# redis-stack

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
redis_stack/: __init__.py
